@@ -6,23 +6,23 @@ AUX 1.3.48-tinfo.patch 795 SHA256 08ef23125098acf37cb56f071815598fb660d46dba8810
 AUX 1.3.8-bedup-conf-path.patch 1676 SHA256 c29a37b8a30ced888810360254c663f895b8d9b00a196cb062b6173c803f9724 SHA512 e0d59e5c3541084d7f508e37888e9b324b9795da628d243e762341cf8b0abc34a02b8ad443f255a8318e04bd6aeff59388f4c240cd14ac695b580881cff246b4 WHIRLPOOL be20a668151426888778e485b9af39b3ad3f2805048be0d696ee73aeae13c8142e125ab79a3892bcbc61444f300bdc51bd965113984b486e6840944023c3a3c1
 AUX 1.4.26-bedup-conf-path.patch 1620 SHA256 d82432b127efa3f9b409ae8acdb81b90b213afe30a070fb5b58c0215ac6ba89e SHA512 89298b0d8ce135570070ac688e1798c0eb73c1b2d0cad233c417638afcdcd7409fa029ac78b5c13fd98d6cf6c297c1cb545f5b0b706b53f70b181db174a16255 WHIRLPOOL 36b25bae02b58279fbefaeff1c95d5e7d4c20cb3033ea4e0a07f5a388cbdfb09308020c2140b96e5f07035544449c1ff6f886c24c341786657a1c53adb3297bf
 AUX 1.4.26-tinfo.patch 767 SHA256 5283a6e2ebbfc5192a9598bf2cbf3bc63d6a11613d1fa650708358da584ad519 SHA512 2f2a60951357f9d05213616ae1e623feb052bdd480e8c46e47eaabb86b53a5822e8ffcbd321d502de49b670f72075445e303ef78bcb02deb9ee16ae7f7590b65 WHIRLPOOL 3bb7a934be592b0f282aaf93e94c4ae7c939bd9cc945e122c40ba242284f48cac3855c240081fc654b6e684ddbd5769ead1ff0c2d3ccbd6e7bda824b34f7ba18
-AUX burp.initd 747 SHA256 25f3916271523a4fdda027c188698b35576aa431ccc19f1f80d2b63d2ebfb59b SHA512 f00295d843ab6fa1f1ff14f182ead2bdf806686139cd2ebdb410c6fa0a10989253cd82e0828d3e4bca6d64e5c1cc53c4e9ead4a0bf608d17212492e6052b6a73 WHIRLPOOL 2983efd6f1845fb0756e9b33693f02c8173e46bb2ad566c69cb5cde2e0511a8129e72b5c76079ce0978cc7094b77540dd4690565b4d049d0701f41ebb4ff5d31
+AUX burp.initd 868 SHA256 dfc915fea3755776029cd2c3e740be5d8c2039ab3eb5aebebc9f27a7c9d6d851 SHA512 17e2b791bef7a268f0f8cd1c22fac4e73a3181eaf112758ae991b6d8ad0e0b6f54c6da3966cadba03877a907473775f2d3153148d2fb6ebf8a0e608de737fb62 WHIRLPOOL ea611a95f6fe62903230563d6390ae0e5ccf91eab792844141dee2b36609c7a1b9617fad895bd2d7f416382fd30b108796e9eeecd911a920a885e6866d3e6dee
 DIST burp-1.3.48.tar.bz2 683509 SHA256 bb456c208998d2f5806828357934e794cd9675448cb6545473364fd9e6d73509 SHA512 08de252f25ff7aa448dd6768272a9a14622902347445313b570c857b4e690374e92956379d5b388f446a88427fc4924f9c0df83cba390aa15fd040b8e92f1946 WHIRLPOOL ac99abddd74bcc753037841afc78c74c7af23ad550334f0585540f056ce93243b8958cbdc37cae15cb98a02c2884c928dd65ac03820e1ef53ea031128a831a44
 DIST burp-1.3.8.tar.bz2 796082 SHA256 ed1546d97e902d0b3974a32ef3f543b5d9ec0a5448f3caca2373383192169656 SHA512 49f4fa43bcbd2aa54b8cee840dfb2f1b7e396048c609d7303fdef08d13dbaf7b0c7016da39620fc5a15cd9dfb8577f82e8446512887aff1ce1b6ce31e7a60e57 WHIRLPOOL 957cdf4b75ec5a79b7c259786b099cf5c001ebc1684df0a1028dda7ec90a2710c1cfcd4f2a8a2fb349466bc5405672350f01f989a4f6a5302eae4fa466af3056
 DIST burp-1.4.26.tar.bz2 710273 SHA256 04111dd0d41277b6b257d7551333f394a3b6da12ffefc8222ba99777ed9448ff SHA512 d42249ac837a642ad0ca980060053d58685c2a5aa61d790ad67a72828fe632f99346886d29e175f6f533267608e55d784db86d5f0ee946519b937ef2825d4530 WHIRLPOOL f724d0a91d4447c5a2ce7920662078a845ae300966bc9425632f80f81cfd19b223c8f0c108c7e6e636a4503837b7202b643bc3c933d3e894d3a0f7a0358d4458
-EBUILD burp-1.3.48.ebuild 2468 SHA256 05336c89f0851897f344b1597be56532c76671dab656138330df6ddaef7b34c9 SHA512 45602204afc12871f381262782f09c607d6ebff1ecaf6b0a38bc1b5cbeb7f1a8396f3ee7742d840a5417b5e1460795d26f9aed644e5ae8e0c5aa13f327df8b48 WHIRLPOOL 0b51e66888349f0ac8a303c5d581ec9837c76c47d02d7e4038b0f5bff34b9c04293caecb5acbd9e766cd8d5faf897630a741890d848c96f32afa3300a44ec9d2
-EBUILD burp-1.3.8.ebuild 2393 SHA256 df754eb2d49350bd9bbf09ea1c46e9d5abf32bc8ee3273d1a0e9b9cdcd5cc014 SHA512 74c7ff106d905969d795e77ead499d84899fbf05c3ea01d0615f336e750a25b93b0a3448e4b9285d5ab823f920e3bddc65683b0fa4c96804059e295694755a07 WHIRLPOOL d874ebbcab1e64a4c77af6d3cf7024e30e10261eae917eadcf2d2b9b8463fae8fbfdfb5766bf430c7af66a0a73e9f63d46776ae221ebd6afacc818a6308248c4
-EBUILD burp-1.4.26.ebuild 2468 SHA256 05336c89f0851897f344b1597be56532c76671dab656138330df6ddaef7b34c9 SHA512 45602204afc12871f381262782f09c607d6ebff1ecaf6b0a38bc1b5cbeb7f1a8396f3ee7742d840a5417b5e1460795d26f9aed644e5ae8e0c5aa13f327df8b48 WHIRLPOOL 0b51e66888349f0ac8a303c5d581ec9837c76c47d02d7e4038b0f5bff34b9c04293caecb5acbd9e766cd8d5faf897630a741890d848c96f32afa3300a44ec9d2
-MISC ChangeLog 2330 SHA256 b8861344d581f01274235f5e2c5db3f7d18ffa3bb556c5865ba5dc71be9cd5b0 SHA512 ca63890fe411865f89411cb3965082be44875ea77bd8596bc624e5916943cafeab201d2109ea00bb84627584911ba0fcecd1d8ffeb1e0731cc275fd3e2535a75 WHIRLPOOL 25ddd0915710256c03ab52260bd9ee61382ebc6d0364b8a913e134177d6e1fdce44501676aaeafd55e73c47ed42f3d3128efb2e5d1b7f601e10ec1d3e064fac4
+EBUILD burp-1.3.48.ebuild 2382 SHA256 d70d7c18dfdcb597da3be89a39e98135768dea979c13d0883fb1fa820f31e5cd SHA512 11a96262dd1f8f5a0d8435f751698e3d4203fb33d208f60f987278b913f2d96fe96a1db209a6aeba8d73786544e0caae284df27bb22a2ef2c182df522eee1ca0 WHIRLPOOL ad43a752923a6a899f6753a67ab4d170d5ea5d684670b5f078371b5af9f9a38da853fd9ece9718ae8782db57ec69c08a2f04e8a0a60a7ae270e6fc525160b72b
+EBUILD burp-1.3.8.ebuild 2307 SHA256 ff2b7a51045b8355aa125caaa92f575f1dfae3cdcfb08829e9ced587ee3b40d5 SHA512 98a15ff6b4f836ecd61be081c12d75fcc1596c7c3d29a1b6035c5d3231671ec577390dcff60f06681cbc88d5e8a5791f50c6808eff387051ebc2950f43fb175a WHIRLPOOL 6b61b2662fe7dd60812969acd2019827ab3ade9c4457ced525dd77a4a809399e73cf4f811bd5dab9d176170f68f2fcbe760a3df30037c94b8fd4ee3edc1d57bc
+EBUILD burp-1.4.26.ebuild 2382 SHA256 d70d7c18dfdcb597da3be89a39e98135768dea979c13d0883fb1fa820f31e5cd SHA512 11a96262dd1f8f5a0d8435f751698e3d4203fb33d208f60f987278b913f2d96fe96a1db209a6aeba8d73786544e0caae284df27bb22a2ef2c182df522eee1ca0 WHIRLPOOL ad43a752923a6a899f6753a67ab4d170d5ea5d684670b5f078371b5af9f9a38da853fd9ece9718ae8782db57ec69c08a2f04e8a0a60a7ae270e6fc525160b72b
+MISC ChangeLog 2606 SHA256 0a38bf9c4c5c38484162f53221c230f530c6b5ab787ad20bc1d9f8a74f32b0c8 SHA512 11f1a9c662cf6eda06c1f5f4038ccbd04a9f0fb560b74dd08709d384858f561e312e07da6b9b66aeb26f67968388e6e0107e071d45bf6ffb1308c609b54e071b WHIRLPOOL 9fabe9bc1e67e6cbbf30bb81b92a5c42acbd802af0dcbab16e6e57902fbd3a9dc64b39131e514448147c008644777df3bc28f52f11ea5d74280721802e153c26
 MISC metadata.xml 556 SHA256 9c70bf04bfc1bf607ab5319f644fb52eb4e3aa53fe1cc6d7453a6eae3d8463e6 SHA512 31801c6438c7e6bd44dbd2cd137c509584d91c57837dca6392544bd312a6ff4abb5cbd9b7486983d2146a18f9b22303bfa69a66982cbdecbf8daff78b43cdfae WHIRLPOOL ab1cc652c1a6a78777f09678649faa17dc648139dcc8f9c7045a0c0aaaf18b1178be75f60b89939c9606885dce4b152c95aae061e8bd0ff2b6cf644ec7d4df24
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUcjWwAAoJEPATRTHh2/q12JMH/1YKEL2/KW6GVg59/IxrHUOh
-7qAGnLVO2hJhizJuT73ZX9G3XsTjoo8RGyCuW1bWVfilOSCaTNhoup2Nlux2bUhG
-o9tNiK4ge+56HG90paNoLcbHvThZHBHHKAjC8okOLI3UdvKQp0QXEbc2kNJa75h/
-EBAV+7Owx7fPBWB+CPZvguJVwkdzCmwKujSVakKzNaRdFSU/1vmYipLH1Zgx4sdl
-/6+buBbq6L15ieNZyca3aQbbgydEjzL+CCMwDA9cSVHLxEpZMZmvixpAeFZ8BoRt
-FQ37wdQq7dL+oOeG4nFDhX9S6L0Qkl7oWdLsvieJXoVhTLNP/Zuqa/eoZrUY268=
-=1egS
+iQEcBAEBCAAGBQJUfIVGAAoJEPATRTHh2/q1jhkH/j4lo4SbKccCd8ZTbLTCyN61
+uk4hm9+LCltuGbyBLQ4IZc01RZURArRoHnl6NAyR5gF994Cc8A+ecCK+xhbBaRK7
+7t51XnvjGc6HIuOBit9/CfYxnwl/NfbAYSJSzmRTi4xLeW2eyl2P4xXhfv6BpH82
+V1g73VyD8/yqqiwKLoX9m7VSNyYERnUdFzwKa1+9wC5tpzq+yx6XGqKOCTP77LGx
+c6W0Y37Ge5VvjJ2/U/weF2ynD8KK4waa0Wf6sWM+OIeN+1fl/FEBjItSSZ6Ak5v8
+t8lx+Kez0ZESZRDarjcoX7Au8Qn+Skg9GCDj91HfBKeRGidFaeMZL25EE9Eajfo=
+=A6wC
 -----END PGP SIGNATURE-----
