@@ -74,6 +74,10 @@ src_install() {
 
 	fowners root:burp /etc/burp /var/spool/burp
 	fperms 0775 /etc/burp /var/spool/burp
+	fowners root:burp /etc/burp/clientconfdir
+	fperms 0750 /etc/burp/clientconfdir
+	fowners root:burp /etc/burp/burp-server.conf
+	fperms 0640 /etc/burp/burp-server.conf
 
 	if use ssl; then
 		# The server will create this directory if it doesn't exist, but the
@@ -94,19 +98,11 @@ src_install() {
 
 pkg_postinst() {
 	if use ssl && [ ! -e /etc/burp/CA/index.txt ]; then
-		elog "At first run burp will generate DH parameters and SSL "
+		elog "At first run burp server will generate DH parameters and SSL"
 		elog "certificates.  You should adjust configuration before."
 		elog "Server configuration is located at"
 		elog ""
 		elog "  /etc/burp/burp-server.conf"
-		elog ""
-		elog "and client configuration is located at"
-		elog ""
-		elog "  /etc/burp/burp.conf"
-		elog ""
-		elog "To generate certificates without running burp server run"
-		elog ""
-		elog "  HOME=/var/spool/burp burp -c /etc/burp/burp-server.conf -F -g"
 		elog ""
 	fi
 }
