@@ -16,6 +16,8 @@ start() {
 	checkpath -o burp:burp -m 0775 -d /run/lock/burp
 	checkpath -o root:burp -m 0775 -d /etc/burp
 	checkpath -o root:burp -m 0775 -d /etc/burp/CA
+	checkpath -o root:burp -m 0750 -d /etc/burp/clientconfdir
+	checkpath -o root:burp -m 0640 -f /etc/burp/burp-server.conf
 	start-stop-daemon --start \
 		--pidfile "$PIDFILE" \
 		--make-pidfile \
